--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,7 @@ env:
 
 jobs:
   build_and_push:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     permissions:
       contents: 'read'
       id-token: 'write'
