👷 Ony build docker on tags & main

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,11 @@
 name: Push to Artifact Registry
 
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - 'main'
+      - 'releases/**'
+    tags:
 
 env:
   IMAGE_NAME: 'hyle'
