--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -12,3 +12,4 @@ bonsai-sdk = { version = "1.1.3", features = ["non_blocking"] }
 risc0-zkvm = { version = "1.1.3" }
 bytemuck = "1.20.0"
 bincode = "1.3.3"
+serde = { version = "1.0.215", features = ["derive"] }
