--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
 [features]
 dhat = ["dep:dhat"]
 
+# Used in the CI for slightly faster tests.
 [profile.fastdebug]
 inherits = "dev"
 opt-level = 1
