--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,12 +50,7 @@ jobs:
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-      - run: cargo nextest run --profile ci --cargo-profile fastdebug --test consensus_tests --test hyllar_test --test tx_settlement_test
-      - name: Upload test results to Codecov
-        if: ${{ !cancelled() }}
-        uses: codecov/test-results-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          files: target/nextest/ci/junit.xml
   coverage:
     name: Unit tests coverage
     runs-on: ubuntu-latest
