--- a/contracts/hyllar/guest/Cargo.toml
+++ b/contracts/hyllar/guest/Cargo.toml
@@ -11,3 +11,6 @@ test=false
 risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
 sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
 hyllar = { path = "../contract" }
+
+[dev-dependencies]
+risc0-zkvm = { version = "1.1.3" }
