--- a/contracts/hyllar/guest/Cargo.toml
+++ b/contracts/hyllar/guest/Cargo.toml
@@ -13,4 +13,4 @@ sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
 hyllar = { path = "../contract" }
 
 [dev-dependencies]
-risc0-zkvm = { version = "1.1.3" }
+risc0-zkvm = { version = "1.1.3", features = ["prove"] }
