Revert to increasing the timeouts and debug only for faster build times

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
-      - run: cargo build --profile fastdebug --verbose
-      - run: cargo nextest run --profile ci --cargo-profile fastdebug --workspace
+      - run: cargo build --verbose
+      - run: cargo nextest run --profile ci --workspace
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
