Return proofs as part of blob_tx calls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ test-log = { version = "0.2.16", features = [
 tokio-stream = "0.1.16"
 tempfile = "3.14.0"
 testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
+assert-json-diff = "2.0.2"
 
 [features]
 dhat = ["dep:dhat"]
