--- a/contracts/amm/guest/Cargo.toml
+++ b/contracts/amm/guest/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 amm = { path = "../contract" }
+anyhow = "1.0.89"
