--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -3,6 +3,10 @@ name = "bonsai-runner"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]         
+name = "bonsai-runner"    
+required-features = ["bonsai-runner"]
+
 [dependencies]
 anyhow = "1.0.94"
 tracing = "0.1"
@@ -13,3 +17,15 @@ risc0-zkvm = { version = "1.1.3" }
 bytemuck = "1.20.0"
 bincode = "1.3.3"
 serde = { version = "1.0.215", features = ["derive"] }
+
+# For server only
+axum = { version = "0.7", features =["macros"], optional = true }
+serde_json = { version = "1.0", optional = true }
+tokio = { version = "1", features = ["full"], optional = true }
+tracing-subscriber = {version = "0.3", optional = true}
+
+[features]
+bonsai-runner = ["axum", "serde_json", "tokio", "tracing-subscriber"]
+
+# Feature par défaut
+default = [ "bonsai-runner" ]
