✨ Add SP1 verifier support, version 3, make contract-sdk ZKVM agnostic (ish)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 target
-*.bin
 data_node*
 **/*Consensus.data.tmp
-*.proof
-# Added by cargo
 
-/target
+*.bin
+*.proof
+!tests/proofs/sp1_basic_proof.bin
+
 .sqlx
+
+# Added by cargo
+/target
