--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,9 @@ tokio = { version = "1.42.0", features = ["full", "tracing"] }
 anyhow = "1.0.94"
 clap = { version = "4.5.23", features = ["derive"] }
 rand = "0.8.5"
-bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
+bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features = [
+    "serde",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
@@ -70,6 +72,7 @@ base64 = "0.22.1"
 bytes = "1.9.0"
 strum = "0.26.3"
 strum_macros = "0.26.4"
+sp1-sdk = "3.4.0"
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
