--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "contracts/hydentity/guest",
     "contracts/amm/guest",
     "crates/bonsai-runner",
+    "crates/rust-verifiers",
 ]
 resolver = "2"
 
@@ -26,9 +27,7 @@ tokio = { version = "1.42.0", features = ["full", "tracing"] }
 anyhow = "1.0.94"
 clap = { version = "4.5.23", features = ["derive"] }
 rand = "0.8.5"
-bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features = [
-    "serde",
-] }
+bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
@@ -49,7 +48,6 @@ dhat = { version = "0.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"] }
 tokio-util = "0.7.13"
 assertables = "9.4.0"
-risc0-zkvm = { version = "1.2.0" }
 borsh = "1.5.3"
 # tokio (no TLS)
 sqlx = { version = "0.8.2", features = [
@@ -66,7 +64,7 @@ base64 = "0.22.1"
 bytes = "1.9.0"
 strum = "0.26.3"
 strum_macros = "0.26.4"
-sp1-sdk = "3.4.0"
+hyle-rust-verifiers = { path = "./crates/rust-verifiers" }
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
