--- a/contracts/hydentity/contract/Cargo.toml
+++ b/contracts/hydentity/contract/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
+sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk" }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
 anyhow = "1.0.89"
-sha2 = {git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0"}
-bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
+bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
