--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ base64 = "0.22.1"
 bytes = "1.9.0"
 strum = "0.26.3"
 strum_macros = "0.26.4"
+indexmap = "2.7.0"
 sp1-sdk = "3.4.0"
 
 [target.'cfg(target_os="macos")'.dependencies]
