--- a/contracts/hydentity/guest/Cargo.toml
+++ b/contracts/hydentity/guest/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name="hydentity-guest"
-test=false
+name = "hydentity-guest"
+test = false
 
 [dependencies]
+sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk", features = [
+    "risc0",
+] }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
-sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
 hydentity = { path = "../contract" }
