--- a/contracts/hyllar/guest/Cargo.toml
+++ b/contracts/hyllar/guest/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name="hyllar-guest"
-test=false
+name = "hyllar-guest"
+test = false
 
 [dependencies]
 risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
-sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
+sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk", features = [
+    "risc0",
+] }
 hyllar = { path = "../contract" }
 
 [dev-dependencies]
