✅ Generate proofs in e2e tests directly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,9 +99,14 @@ tokio-stream = "0.1.17"
 tempfile = "3.14.0"
 testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
 assert-json-diff = "2.0.2"
+hyrun = { path = "./crates/hyrun" }
 
 [features]
 dhat = ["dep:dhat"]
+
+[profile.fastdebug]
+inherits = "dev"
+opt-level = 1
 
 [profile.release]
 lto = "thin"
