--- a/contracts/hyllar/contract/Cargo.toml
+++ b/contracts/hyllar/contract/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk", features = [
-    "risc0",
-] }
+sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk" }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
