--- a/contracts/hyllar/guest/Cargo.toml
+++ b/contracts/hyllar/guest/Cargo.toml
@@ -9,7 +9,7 @@ test=false
 
 [dependencies]
 risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
-sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
+sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk", features = ['risc0'] }
 hyllar = { path = "../contract" }
 
 [dev-dependencies]
