--- a/contracts/staking/contract/Cargo.toml
+++ b/contracts/staking/contract/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "hydentity"
+name = "staking"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk", features = ["risc0"] }
+sdk = { path = "../../../contract-sdk", package="hyle-contract-sdk" }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = [
     "derive",
