--- a/contracts/hyllar/guest/Cargo.toml
+++ b/contracts/hyllar/guest/Cargo.toml
@@ -15,4 +15,6 @@ sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk", features 
 hyllar = { path = "../contract" }
 
 [dev-dependencies]
-risc0-zkvm = { version = "1.2.0", features = ["prove"] }
+risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+    "prove",
+] }
