--- a/crates/hyrun/Cargo.toml
+++ b/crates/hyrun/Cargo.toml
@@ -13,7 +13,9 @@ hyllar = { path = "../../contracts/hyllar/contract" }
 amm = { path = "../../contracts/amm/contract" }
 
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-risc0-zkvm = { version = "1.2.0" }
+risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+    "client",
+] }
 env_logger = "0.11.5"
 serde = { version = "1.0", default-features = false, features = [
     "derive",
