--- a/crates/hyrun/Cargo.toml
+++ b/crates/hyrun/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk", features = [
     "risc0",
 ] }
-hydentity = { path = "../../contracts/hydentity/contract" }
+hydentity = { path = "../../contracts/hydentity" }
 # hystake = { path = "../hystake/contract" }
-hyllar = { path = "../../contracts/hyllar/contract" }
-amm = { path = "../../contracts/amm/contract" }
+hyllar = { path = "../../contracts/hyllar" }
+amm = { path = "../../contracts/amm" }
 
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
