--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,8 @@ console-subscriber = "0.4.1"
 paste = "1.0.15"
 blst = "0.3.13"
 # opentelemetry and axum-otel-metrics must be updated together (so that there is only one opentelemetry version)
-opentelemetry = "0.24.0"
-axum-otel-metrics = "0.9.0-alpha.2"
+opentelemetry = "0.27"
+axum-otel-metrics = "0.9.1"
 tower-http = { version = "0.6.2", features = ["trace", "cors"] }
 futures = "0.3.31"
 dhat = { version = "0.3.3", optional = true }
