--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,7 @@ tokio = { version = "1.42.0", features = ["full", "tracing"] }
 anyhow = "1.0.94"
 clap = { version = "4.5.23", features = ["derive"] }
 rand = "0.8.5"
-bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features = [
-    "serde",
-] }
+bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
