--- a/contracts/hydentity/Cargo.toml
+++ b/contracts/hydentity/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0", default-features = false, features = [
 ] }
 anyhow = "1.0.89"
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
-bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
+bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
 
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
