--- a/contracts/hyllar/Cargo.toml
+++ b/contracts/hyllar/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0", default-features = false, features = [
 ] }
 anyhow = "1.0.89"
 sha3 = "0.10.8"
-bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
+bincode = { version = "2.0.0-rc.3" }
 serde_with = "3.11.0"
 
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
