--- a/contracts/staking/Cargo.toml
+++ b/contracts/staking/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [[bin]]
 name = "staking"
 required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -24,4 +25,5 @@ risc0-zkvm = { version = "1.2.0", default-features = false, features = [
 ], optional = true }
 
 [features]
+default=["risc0"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
