--- a/contract-sdk/Cargo.toml
+++ b/contract-sdk/Cargo.toml
@@ -14,15 +14,15 @@ serde = { version = "1.0", default-features = false, features = [
 bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
 anyhow = "1.0.89"
+tracing = { version = "0.1", optional = true }
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
-    'std',
-], optional = true }
-tracing = {version = "0.1", optional = true}
+risc0-zkvm = { version = "1.2", default-features = false, optional = true }
+sp1-zkvm = { version = "3.4.0", optional = true }
 
 [dev-dependencies]
 mockall = "0.13.0"
 
 [features]
-risc0 = ["risc0-zkvm"]
+risc0 = ["dep:risc0-zkvm"]
+sp1 = ["dep:sp1-zkvm"]
 tracing = ["dep:tracing"]
