--- a/contracts/amm/Cargo.toml
+++ b/contracts/amm/Cargo.toml
@@ -9,6 +9,7 @@ repository = { workspace = true }
 [[bin]]
 name = "amm"
 required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -20,9 +21,11 @@ anyhow = "1.0.89"
 sha3 = "0.10.8"
 bincode = { version = "2.0.0-rc.3" }
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
     'std',
-], optional = true }
+] }
 
 [features]
+default = ["metadata"]
+metadata = []
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
