--- a/contracts/hydentity/Cargo.toml
+++ b/contracts/hydentity/Cargo.toml
@@ -9,6 +9,7 @@ repository = { workspace = true }
 [[bin]]
 name = "hydentity"
 required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -22,9 +23,11 @@ sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8
 bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
     'std',
-], optional = true }
+] }
 
 [features]
+default = ["metadata"]
+metadata = []
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
