--- a/contracts/hyllar/Cargo.toml
+++ b/contracts/hyllar/Cargo.toml
@@ -9,6 +9,7 @@ repository = { workspace = true }
 [[bin]]
 name = "hyllar"
 required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -21,9 +22,9 @@ sha3 = "0.10.8"
 bincode = { version = "2.0.0-rc.3" }
 serde_with = "3.11.0"
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
     'std',
-], optional = true }
+] }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
@@ -31,6 +32,7 @@ risc0-zkvm = { version = "1.2.0", default-features = false, features = [
     'prove',
 ] }
 
-
 [features]
+default = ["metadata"]
+metadata = []
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
