--- a/crates/hyrun/Cargo.toml
+++ b/crates/hyrun/Cargo.toml
@@ -7,9 +7,7 @@ homepage = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk", features = [
-    "risc0",
-] }
+sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
 hydentity = { path = "../../contracts/hydentity" }
 # hystake = { path = "../hystake/contract" }
 hyllar = { path = "../../contracts/hyllar" }
@@ -29,6 +27,6 @@ base64 = "0.22.1"
 bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
 borsh = "1.5.3"
-reqwest = "0.12.8"
+reqwest = { version = "0.12.8", features = ["blocking"] }
 anyhow = "1.0.94"
 serde_json = "1.0.133"
