--- a/contracts/amm/Cargo.toml
+++ b/contracts/amm/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [[bin]]
 name = "amm"
-required-features = ["risc0"]
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -17,9 +16,10 @@ anyhow = "1.0.89"
 sha3 = "0.10.8"
 bincode = { version = "2.0.0-rc.3" }
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
-    'std',
-], optional = true }
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
+sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }
 
 [features]
+default = ["risc0"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
+sp1 = ["sp1-zkvm", "sdk/sp1"]
