--- a/contracts/hydentity/Cargo.toml
+++ b/contracts/hydentity/Cargo.toml
@@ -19,9 +19,10 @@ sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8
 bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
-    'std',
-], optional = true }
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
+sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }
 
 [features]
+default = ["risc0"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
+sp1 = ["sp1-zkvm", "sdk/sp1"]
