--- a/contracts/hyllar/Cargo.toml
+++ b/contracts/hyllar/Cargo.toml
@@ -18,9 +18,8 @@ sha3 = "0.10.8"
 bincode = { version = "2.0.0-rc.3" }
 serde_with = "3.11.0"
 
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
-    'std',
-], optional = true }
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
+sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
@@ -28,6 +27,7 @@ risc0-zkvm = { version = "1.2.0", default-features = false, features = [
     'prove',
 ] }
 
-
 [features]
+default = ["risc0"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
+sp1 = ["sp1-zkvm", "sdk/sp1"]
