--- a/contracts/amm/Cargo.toml
+++ b/contracts/amm/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [[bin]]
 name = "amm"
+required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -16,7 +18,9 @@ anyhow = "1.0.89"
 sha3 = "0.10.8"
 bincode = { version = "2.0.0-rc.3" }
 
-risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
+    "std",
+] }
 sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }
 
 [features]
