--- a/contracts/hydentity/Cargo.toml
+++ b/contracts/hydentity/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [[bin]]
 name = "hydentity"
 required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -19,7 +20,9 @@ sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8
 bincode = { version = "2.0.0-rc.3" }
 hex = "0.4.3"
 
-risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
+    "std",
+] }
 sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }
 
 [features]
