--- a/contracts/hyllar/Cargo.toml
+++ b/contracts/hyllar/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [[bin]]
 name = "hyllar"
 required-features = ["risc0"]
+test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
@@ -18,7 +19,9 @@ sha3 = "0.10.8"
 bincode = { version = "2.0.0-rc.3" }
 serde_with = "3.11.0"
 
-risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
+risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
+    "std",
+] }
 sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }
 
 [dev-dependencies]
