--- a/crates/hyrun/Cargo.toml
+++ b/crates/hyrun/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "hyrun"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
+# license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk", features = [
