--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
           bbup -v 0.41.0
 
       - name: Generate code coverage
-        run: cargo llvm-cov --all-features --workspace --lib --lcov --output-path lcov.info -- --test-threads=1
+        run: cargo llvm-cov --workspace --lib --lcov --output-path lcov.info -- --test-threads=1
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
