--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -17,7 +17,7 @@ sdk = { path = "../contract-sdk", package = "hyle-contract-sdk" }
 risc0-build = { version = "1.2.0", optional = true }
 
 [package.metadata.risc0]
-methods = ["amm", "hyllar", "hydentity", "staking"]
+methods = ["amm", "hyllar", "hydentity", "staking", "risc0-recursion"]
 
 [features]
 build = ["dep:risc0-build"]
