--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,9 +65,7 @@ dhat = { version = "0.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"] }
 tokio-util = "0.7.13"
 assertables = "9.5.0"
-risc0-zkvm = { version = "1.2.0", default-features = false, features = [
-    "client",
-] }
+risc0-zkvm = { version = "1.2.0", default-features = false }
 borsh = "1.5.3"
 # tokio (no TLS)
 sqlx = { version = "0.8.2", features = [
@@ -113,6 +111,10 @@ tempfile = "3.14.0"
 testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
 assert-json-diff = "2.0.2"
 hyrun = { path = "./crates/hyrun" }
+risc0-recursion = { path = "./contracts/risc0-recursion" }
+risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+    "client",
+] }
 
 [features]
 dhat = ["dep:dhat"]
