--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ dhat = { version = "0.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"] }
 tokio-util = "0.7.13"
 assertables = "9.5.0"
-risc0-zkvm = { version = "1.2.0", default-features = false }
+risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }
 borsh = "1.5.3"
 # tokio (no TLS)
 sqlx = { version = "0.8.2", features = [
