--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
 
     "crates/bonsai-runner",
     "crates/hyrun",
+    "crates/hyle-loadtest",
 ]
 resolver = "2"
 
@@ -33,7 +34,9 @@ hyle-contract-sdk = { path = "./contract-sdk", features = ["tracing"] }
 hyle-contracts = { path = "./contracts", package = "hyle-contracts" }
 hydentity = { path = "./contracts/hydentity" }
 hyllar = { path = "./contracts/hyllar" }
+amm = { path = "./contracts/amm" }
 staking = { path = "./contracts/staking" }
+bonsai-runner = { path = "./crates/bonsai-runner" }
 config = "0.15.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
