--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -19,3 +19,6 @@ reqwest = "0.12.9"
 anyhow = "1.0.94"
 bincode = { version = "2.0.0-rc.3" }
 clap = "4.5.23"
+risc0-zkvm = { version = "1.2.0", default-features = false, features = [
+    "client",
+] }
