✨ New Staking Contract (#453)
* ✨ New Staking Contract

* ✅ Fix consensus it test

* typo

* ✅ Fix genesis test

* ✅ Fix amm e2e test

* ✅ Fix some e2e

* ✅  rejoin flow (very flakky)

* 🚧

* ✅ Fix rejoin

* clean & rebuild contract

* clean

* ignore flakky test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ hyle-contracts = { path = "./contracts", package = "hyle-contracts" }
 hydentity = { path = "./contracts/hydentity" }
 hyllar = { path = "./contracts/hyllar" }
 staking = { path = "./contracts/staking" }
+bonsai-runner = { path = "./crates/bonsai-runner" }
 config = "0.15.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
