--- a/contracts/hydentity/Cargo.toml
+++ b/contracts/hydentity/Cargo.toml
@@ -26,8 +26,10 @@ hex = "0.4.3"
 risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
     'std',
 ] }
+client_sdk = { path = "../../crates/client-sdk", package = "client-sdk", optional = true }
 
 [features]
 default = ["metadata"]
 metadata = []
+client = ["metadata", "dep:client_sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
