--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - 'main'
       - 'releases/**'
+      - 'publish_ghcr'
     tags:
+      - '*'
 
 env:
   IMAGE_NAME: 'hyle'
@@ -18,6 +20,7 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
+      packages: 'write'
 
     runs-on: ubuntu-latest
 
@@ -29,7 +32,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{env.AR_REPO_LOCATION}}/${{ env.AR_URL }}/${{ env.IMAGE_NAME }}
+          images: |
+            ${{env.AR_REPO_LOCATION}}/${{ env.AR_URL }}/${{ env.IMAGE_NAME }}
+            ghcr.io/hyle-org/${{ env.IMAGE_NAME }}
+
 # Will produces tags given this table : 
 # 
 # | Event               | Ref                           | Docker Tags                |
@@ -48,6 +54,13 @@ jobs:
           username: _json_key
           password: ${{ secrets.GOOGLE_CREDENTIALS }}
           registry: ${{ env.AR_REPO_LOCATION }}
+
+      - name: 'Login to GitHub Container Registry'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build and push
         uses: docker/build-push-action@v6
