icrease ci timeout

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,6 +1,8 @@
 [profile.ci.junit]  # this can be some other profile, too
 path = "junit.xml"
 
+[profile.ci]
+slow-timeout = { period = "120s", terminate-after = 2 }
 
 [profile.default]
 # "retries" defines the number of times a test should be retried. If set to a
