use dep: syntax

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -136,38 +136,38 @@ default = ["tx_builder", "node"]
 dhat = ["dep:dhat"]
 # Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
 nonreproducible = ["hyle-contracts/nonreproducible"]
-tx_builder = ["bonsai-runner", "hyllar", "hydentity", "hyle-contracts", "risc0-zkvm"]
+tx_builder = ["dep:bonsai-runner", "dep:hyllar", "dep:hydentity", "dep:hyle-contracts", "dep:risc0-zkvm"]
 node = [
-    "anymap",
-    "assertables",
-    "axum",
-    "axum-otel-metrics",
-    "axum-test",
-    "bonsai-runner",
-    "borsh",
-    "bytes",
-    "clap",
-    "config",
-    "dhat",
-    "futures",
-    "hyle-contracts",
-    "hydentity",
-    "hyllar",
-    "indexmap",
-    "opentelemetry",
-    "opentelemetry-prometheus",
-    "paste",
-    "prometheus",
-    "quote",
-    "rand",
-    "risc0-zkvm",
-    "ron",
-    "sp1-sdk",
-    "syn",
-    "tokio",
-    "tokio-util",
-    "tower-http",
-    "tracing-subscriber"
+    "dep:anymap",
+    "dep:assertables",
+    "dep:axum",
+    "dep:axum-otel-metrics",
+    "dep:axum-test",
+    "dep:bonsai-runner",
+    "dep:borsh",
+    "dep:bytes",
+    "dep:clap",
+    "dep:config",
+    "dep:dhat",
+    "dep:futures",
+    "dep:hyle-contracts",
+    "dep:hydentity",
+    "dep:hyllar",
+    "dep:indexmap",
+    "dep:opentelemetry",
+    "dep:opentelemetry-prometheus",
+    "dep:paste",
+    "dep:prometheus",
+    "dep:quote",
+    "dep:rand",
+    "dep:risc0-zkvm",
+    "dep:ron",
+    "dep:sp1-sdk",
+    "dep:syn",
+    "dep:tokio",
+    "dep:tokio-util",
+    "dep:tower-http",
+    "dep:tracing-subscriber"
 ]
 
 [profile.release]
