♻️  Add "node" feature to have lighter build (#490)
* ♻️  Add "node" feature to have lighter build

When hyle is used as dependency to have model / tools

* 💚

* clippy

* add client new

* generic new

* icrease ci timeout

* try ipc executor

* install r0vm

* don't refuse late proposal

* remove too_late test

* increase timeout for genesis in multi-node mode

* use dep: syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,3 +88,21 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: lcov.info
           fail_ci_if_error: true
+ 
+  no_default_features:
+    name: Build with no default features 
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          # - beta
+          # - nightly
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/main' }}
+      - name: Build
+        run: cargo build --no-default-features
