--- a/Cargo.toml
+++ b/Cargo.toml
@@ -182,7 +182,7 @@ node = [
     "dep:tracing-subscriber",
 ]
 
-node_local_proving = ["node", "risc0-zkvm/prove"]
+node_local_proving = ["node", "risc0-zkvm/client"]
 
 [profile.release]
 lto = "thin"
