--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Docker meta
         id: meta
-        if: !${{ matrix.mode.push_ghcr }}
+        if: ${{ !matrix.mode.push_ghcr }}
         uses: docker/metadata-action@v5
         with:
           images: |
